# MyRPC_Project

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  项目说明.md  验收报告.md
docs/: architecture.md  verification.md
include/: AIService.h  Acceptor.h  Buffer.h  Channel.h  Codec.h  EpollPoller.h  EventLoop.h  Logger.h  MemoryPool.h  Message.h  Metrics.h  PollPoller.h  Poller.h  TaskCoordinator.h  TcpConnection.h  TcpServer.h  ThreadPool.h
scripts/: acceptance.sh  bench.py  rpc_e2e_client.py
src/: AIService.cpp  Acceptor.cpp  Buffer.cpp  Channel.cpp  Codec.cpp  EpollPoller.cpp  EventLoop.cpp  Logger.cpp  Metrics.cpp  PollPoller.cpp  Poller.cpp  TaskCoordinator.cpp  TcpConnection.cpp  TcpServer.cpp  ThreadPool.cpp  main.cpp
